Arvind : client side flow functional

--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -3,6 +3,7 @@
 
 </style>
 <div id="container">
+    <p>None of the information entered here will be stored locally</p>
     <div id="email-details" class="flow">
         <form id="email-details-form">
             <input id="from-name" placeholder="From (your name)"/>
@@ -16,8 +17,8 @@
     </div>
 
 
-    <div id="enter-attributes" style="display : none;" class="flow">
-    </div>
+    <div id="enter-attributes" style="display : none;" class="flow"></div>
 
+    <div id="login-details" style="display : none;" class="flow"></div>
 
 </div>
