--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 * {
-  font-family : Helvetica, Arial, sans-serif;;
+  font-family : 'Helvetica', Arial, sans-serif;;
 }
 
-#email-details {
+#container {
   input, textarea {display : block; width : 300px; font-size : 14pt; margin : 5px 0px;}
   .unhappyMessage {color : red;}
 }
