--- a/templates/email_account_details.hbs
+++ b/templates/email_account_details.hbs
@@ -1,5 +1,5 @@
 <form id="email-account-details">
     <input id="email" name="email-account" type="email" placeholder="your email address"/>
     <input id="password" name="password" type="password" placeholder="Password of your email account"/>
-    <button id="submit-login-details">Send Emails</button>
+    <button id="submit-login-details">Send Emails</button> <img id="send-spinner" class="hide" src="/images/spinner.gif" width="30"/>
 </form>
