--- a/templates/email_account_details.hbs
+++ b/templates/email_account_details.hbs
@@ -1,5 +1,6 @@
 <form id="email-account-details">
     <input id="email" name="email-account" type="email" placeholder="your email address"/>
+    <a id="gmail-login-link" href="https://accounts.google.com/o/oauth2/auth?response_type=code&scope=profile%20email%20https://mail.google.com/%20profile&client_id=421703536444-megt0e62oo4kjamdavcq451f61snfi70.apps.googleusercontent.com">Send using Gmail</a>
     <input id="password" name="password" type="password" placeholder="Password of your email account"/>
     <button id="submit-login-details">Send Emails</button> <img id="send-spinner" class="hide" src="/images/spinner.gif" width="30"/>
 </form>
