Arvind : removing log statements\n setting trust-proxy in the app to take the protocol from the reverse proxy\n loading gmail image from the protocol app is using

--- a/templates/email_account_details.hbs
+++ b/templates/email_account_details.hbs
@@ -1,7 +1,7 @@
 <form id="email-account-details">
     <p>Sign in with Gmail to send your emails</p>
     <a id="gmail-login-link" href="https://accounts.google.com/o/oauth2/auth?response_type=code&scope=profile%20email%20https://mail.google.com/%20profile&client_id=421703536444-megt0e62oo4kjamdavcq451f61snfi70.apps.googleusercontent.com">
-        <img src="http://i.imgur.com/9T3Okpa.png?1" width="300" />
+        <img src="//i.imgur.com/9T3Okpa.png?1" width="300" alt="sign in with google"/>
     </a>
     <!--<input id="email" name="email-account" type="email" placeholder="your email address"/>-->
     <!--<input id="password" name="password" type="password" placeholder="Password of your email account"/>-->
