--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -10,12 +10,12 @@
     </div>
     <div id="email-details" class="flow">
         <form id="email-details-form">
-            <input id="from-name" name="from-name" placeholder="From (your name)" value="Arvd"/>
-            <p>Personalise your email by using putting ${anything}.</p>
+            <input id="from-name" name="from-name" placeholder="From (your name)"/>
+            <p>Personalise your email by using putting ${anything} where you want to personalise.</p>
             <p>to write "Hello John" or "Hello Amy" in different emails, use "Hello ${name}" in the text. You can customise each name in the next step</p>
-            <input id="subject" name="subject" placeholder="Subject" value="whatever" />
-            <textarea id="email-content" name="email-content" placeholder="Email text">hello ${name}</textarea>
-            <textarea id="csv-recipients" name="recipients" placeholder="Emails of the recipients (comma separated)">arvsr2002@gmail.com, arvsr2002@yahoo.com</textarea>
+            <input id="subject" name="subject" placeholder="Subject" />
+            <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
+            <textarea id="csv-recipients" name="recipients" placeholder="Emails of the recipients (comma separated)"></textarea>
             <button id="submit-button">Continue</button>
         </form>
     </div>
