Arvind : link to gmail on email sent

--- a/views/send-email-response.hbs
+++ b/views/send-email-response.hbs
@@ -1,6 +1,7 @@
 <div>
 {{#if successful}}
-    All emails sent successfully
+    <p>All emails sent successfully.</p>
+    <p>You can <a href="https://mail.google.com/mail/u/0/?pli=1#sent" target="_blank">check your sent email</a> to see if your emails were sent as you wanted.</p>
 {{else}}
     Oops, your mails were not sent! The ones that failed are :
     {{#each emails}}
