Arvind : added SEO tags

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,6 +1,11 @@
 <html>
 <head>
-
+<title>Snail Mail - personalise your emails!</title>
+    <meta name=”description” content="Stop sending the same email to different people 100 times. Personalise your emails and send them using your own Gmail Account!">
+    <meta property="og:title" content="Snail Mail - personalise your emails!"/>
+    <meta property="og:image" content="http://www.centraloregonprinting.com/wp-content/uploads/2012/08/mailing-envelope.jpg" />
+    <meta property="og:description" content="Stop sending the same email to different people 100 times. Personalise your emails and send them using your own Gmail Account!"/>
+    <meta property="fb:admins" content="511171993"/>
 </head>
 <body>
 <div id="container">
