--- a/views/send-email-response.hbs
+++ b/views/send-email-response.hbs
@@ -1,6 +1,6 @@
 <div>
 {{#if successful}}
-    <p>All emails sent successfully.</p>
+    <p>Your emails have been sent</p>
     <p>You can <a href="https://mail.google.com/mail/u/0/?pli=1#sent" target="_blank">check your sent email</a> to see if your emails were sent as you wanted.</p>
 {{else}}
     Oops, your mails were not sent! The ones that failed are :
