--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -1,5 +1,5 @@
 <input id="page-name" type="hidden" value="home"/>
-    <h1>Send Personalised Emails from your own email account!</h1>
+    <h1>Send Personalised Emails from your own Gmail account!</h1>
     <h3>None of your personal data will be stored</h3>
     <div id="flow-container">
         <ol id="breadcrumb">
