--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -1,5 +1,15 @@
 <link rel="stylesheet" href="main.css" />
-<!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script> -->
-<script type="text/javascript" src="/plugins/zepto.min.js"></script>
+ <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
+<!--<script type="text/javascript" src="/plugins/zepto.min.js"></script>-->
 <script type="text/javascript" src="/plugins/happy.js"></script>
 <script src="/bundle.js"></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-57163071-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
