--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -16,6 +16,8 @@
             <input id="subject" name="subject" placeholder="Subject" />
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
             <textarea id="csv-recipients" name="recipients" placeholder="Emails of the recipients (comma separated)"></textarea>
+            <input id="includeSignature" name="include-signature" type="checkbox" />
+            <label for="includeSignature">Add a link to this website in my email signature.</label>
             <button id="submit-button">Continue</button>
         </form>
     </div>
