--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -15,7 +15,7 @@
             <p>to write "Hello John" or "Hello Amy" in different emails, use "Hello ${name}" in the text. You can customise each name in the next step</p>
             <input id="subject" name="subject" placeholder="Subject" />
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
-            <textarea id="csv-recipients" name="recipients" placeholder="Emails of the recipients (comma separated)"></textarea>
+            <textarea id="csv-recipients" placeholder="Emails of the recipients (comma separated)"></textarea>
             <input id="includeSignature" name="include-signature" type="checkbox" />
             <label for="includeSignature">Add a link to this website in my email signature.</label>
             <button id="submit-button">Continue</button>
