--- a/views/partials/email_attribute_row.hbs
+++ b/views/partials/email_attribute_row.hbs
@@ -5,6 +5,5 @@
     {{#each attributes}}
         <td><input type="text" name="{{this}}" placeholder="{{this}}" /></td>
     {{/each}}
-    <td><button class="add email-row-button">+</button></td>
-    <td><button class="remove email-row-button">-</button></td>
+    <td><button class="remove-email-row email-row-button">-</button></td>
 </tr>
