--- a/views/partials/email_attributes.hbs
+++ b/views/partials/email_attributes.hbs
@@ -13,5 +13,6 @@
         {{> email_attribute_row this}}
     {{/each}}
 </table>
-<button id="submit-attributes">Continue</button><span id="empty-attributes" style="display : none;">Looks like you've missed out some fields, is that okay?</span>
+<button id="add-email-row" class="email-row-button">Add Recipient</button>
+<button id="submit-attributes submit-button">Continue</button><span id="empty-attributes" style="display : none;">Looks like you've missed out some fields, is that okay?</span>
 </form>
