--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -17,7 +17,7 @@
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
             <textarea id="csv-recipients" placeholder="Emails of the recipients (comma separated)"></textarea>
             <input id="includeSignature" name="include-signature" type="checkbox" />
-            <label for="includeSignature">Add a link to this website in my email signature.</label>
+            <label for="includeSignature">Add a link to this website in my email signature.</label><br />
             <button id="submit-button">Continue</button>
         </form>
     </div>
