Arvind : stupidly assigned id to the submit button

--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="main.css" />
- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>
-<!--<script type="text/javascript" src="/plugins/zepto.min.js"></script>-->
+ <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>-->
+<script type="text/javascript" src="/plugins/zepto.min.js"></script>
 <script type="text/javascript" src="/plugins/happy.js"></script>
 <script src="/bundle.js"></script>
 <script>
