--- a/views/partials/email_attributes.hbs
+++ b/views/partials/email_attributes.hbs
@@ -14,5 +14,5 @@
     {{/each}}
 </table>
 <button id="add-email-row" class="email-row-button">Add Recipient</button>
-<button id="submit-attributes submit-button">Continue</button><span id="empty-attributes" style="display : none;">Looks like you've missed out some fields, is that okay?</span>
+<button id="submit-attributes" class="submit-button">Continue</button><span id="empty-attributes" style="display : none;">Looks like you've missed out some fields, is that okay?</span>
 </form>
