--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -1,8 +1,11 @@
-<link rel="stylesheet" href="main.css" />
- <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js"></script>-->
+<link rel="stylesheet" href="/main.css" />
+<link rel="stylesheet" href="/zepto-tooltip.css" />
 <script type="text/javascript" src="/plugins/zepto.min.js"></script>
 <script type="text/javascript" src="/plugins/happy.js"></script>
 <script src="/bundle.js"></script>
+<script type="text/javascript" src="/plugins/zepto.animate.js" async="true"></script>
+
+<script type="text/javascript" src="/plugins/zepto-tooltip.js" async="true"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
