--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -10,10 +10,9 @@
     </div>
     <div id="email-details" class="flow">
         <form id="email-details-form">
-            <input id="from-name" name="from-name" placeholder="From (your name)"/>
-            <p>Personalise your email by using putting ${anything} where you want to personalise.</p>
-            <p>to write "Hello John" or "Hello Amy" in different emails, use "Hello ${name}" in the text. You can customise each name in the next step</p>
-            <input id="subject" name="subject" placeholder="Subject" />
+            <div class="tooltip-container"  rel="tooltip" title="Your name as you want recipients to see it."><input id="from-name" name="from-name" placeholder="From (your name)"/></div>
+            <p rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text. You can customise each name in the next step'>Personalise your email by using putting tags (use ${tagName} in the text) where you want to personalise.</p>
+            <div class="tooltip-container"  rel="tooltip" title="You can personalise the subject too!"><input id="subject" name="subject" placeholder="Subject" /></div>
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
             <div id="email-details-container">
                 <div id="csv-emails-container">
@@ -22,7 +21,7 @@
                 <div id="or-container">
                     OR
                 </div>
-                <div id="file-upload-container">
+                <div id="file-upload-container" rel="tooltip" title="Upload a csv. The first row should have the name of the tags.<br />Put <i>email</i> in the first row of the column with the email addresses">
                     <input type="file" id="email-attributes-file" enctype="multipart/form-data" />
                 </div>
             </div>
