Arvind : adding feedback widget

--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -14,5 +14,14 @@
 
     ga('create', 'UA-57163071-1', 'auto');
     ga('send', 'pageview');
-
 </script>
+<script type="text/javascript">var _key=_key||{};_key["_key"]="c0jxitv5gxgnqqnszhylvj7akmy11mmgc48ch7nf5uf4po1z6sli8lven4y50l";_key["_id"]="6220";(function() {var _st= document.createElement("script");_st.setAttribute("type", "text/javascript");_st.setAttribute("src", "http://www.usersdelight.com/ud.js");document.getElementsByTagName("body")[0].appendChild(_st);})();</script><noscript>Engage using <a href="http://www.usersdelight.com">UseresDelight.com</a> apps</noscript>
+{{! hack for the feedback form positioning and heights }}
+<style>
+    #ud_feed_001{
+        top : 20%;
+    }
+    #ud_feed_001 .f_form {
+        min-height : initial;
+    }
+</style>
