Arvind : including replyTo email address

--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -13,6 +13,7 @@
             <div class="tooltip-container"  rel="tooltip" title="Your name as you want recipients to see it."><input id="from-name" name="from-name" placeholder="From (your name)"/></div>
             <p rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text. You can customise each name in the next step'>Personalise your email by using putting tags (use ${tagName} in the text) where you want to personalise.</p>
             <div class="tooltip-container"  rel="tooltip" title="You can personalise the subject too!"><input id="subject" name="subject" placeholder="Subject" /></div>
+            <div class="tooltip-container"  rel="tooltip" title="Optional : the email address you want replies to be sent to"><input id="replyTo" name="replyTo" placeholder="Reply to Email Address" /></div>
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
             <div id="email-details-container">
                 <div id="csv-emails-container">
