--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,10 @@
   display: none;
 }
 
+a:hover {
+  color: initial !important;
+}
+
 #container {
   margin: 0 auto;
   max-width: 960px;
@@ -57,13 +61,19 @@
       display: table;
 
       #csv-emails-container {
-        width : 40%; display : table-cell;
+        width: 40%;
+        display: table-cell;
       }
       #or-container {
-        width : 10%; display : table-cell; vertical-align : middle; text-align : center;
+        width: 10%;
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
       }
       #file-upload-container {
-        width : 40%; display : table-cell; vertical-align : middle;
+        width: 40%;
+        display: table-cell;
+        vertical-align: middle;
       }
     }
   }
@@ -72,16 +82,22 @@
     #empty-attributes {
       padding-left: 10px;
     }
-  .email-row-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: initial;
-    &.remove-email-row {
-      background-image: linear-gradient(#E63D4E, #C11A39);
-      padding: 5px 20px;
+    .email-row-button {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: initial;
+      &.remove-email-row {
+        background-image: linear-gradient(#E63D4E, #C11A39);
+        padding: 5px 20px;
+      }
     }
-  }
-    #add-email-row {background-image: linear-gradient(#aaa,grey);}
+    .preview-button {
+      background: none;
+      color: #666;
+    }
+    #add-email-row {
+      background-image: linear-gradient(#aaa, grey);
+    }
   }
 
   #flow-container {
