--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -5,6 +5,7 @@
 <script src="/bundle.js"></script>
 <script type="text/javascript" src="/plugins/zepto.animate.js" async="true"></script>
 <script type="text/javascript" src="/plugins/zepto-tooltip.js" async="true"></script>
+<script type="text/javascript" src="/plugins/picoModal-2.1.0.min.js" async="true"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
