--- a/views/partials/email_attributes.hbs
+++ b/views/partials/email_attributes.hbs
@@ -1,5 +1,5 @@
 <p>Your email</p>
-<p>{{emailContent}}</p>
+<p>{{{emailContent}}}</p>
 <form id="attribute-details" name="whatever1">
 <table id="email-attribute-table">
     <tr>
