Arvind : replacing new lines in text area with br tags

--- a/views/partials/email_attributes.hbs
+++ b/views/partials/email_attributes.hbs
@@ -1,5 +1,5 @@
-<p>Your email</p>
-<p>{{{emailContent}}}</p>
+<h3>Your email template</h3>
+<div id="email-template-preview">{{{emailContent}}}</div>
 <form id="attribute-details" name="whatever1">
 <table id="email-attribute-table">
     <tr>
