--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,6 +79,14 @@ a:hover {
   }
 
   #enter-attributes {
+    #email-template-preview{
+      $rowBorder : 1px solid #eee;
+      border-top: $rowBorder;
+      border-bottom: $rowBorder;
+      margin: 0;
+      padding: 15px 0px;
+      margin: 10px 0px;
+    }
     #empty-attributes {
       padding-left: 10px;
     }
