Arvind : integrating smtp sending

--- a/views/partials/send_email_status.hbs
+++ b/views/partials/send_email_status.hbs
@@ -1,7 +1,9 @@
 {{#if emails}}
 {{#if successful}}
     <p>Your emails have been sent</p>
-    <p>You can <a href="https://mail.google.com/mail/u/0/?pli=1#sent" target="_blank">check your sent email</a> to see if your emails were sent as you wanted.</p>
+    {{#if sentEmailLink}}
+    <p>You can <a href="{{sentEmailLink}}" target="_blank">check your sent email</a> to see if your emails were sent as you wanted.</p>
+    {{/if}}
 {{else}}
     Oops, your mails were not sent! The ones that failed are :
     {{#each emails}}
