Arvind : send via smtp -showing/hiding loader/send button on receiving a response from the server

--- a/views/partials/email_account_details.hbs
+++ b/views/partials/email_account_details.hbs
@@ -13,7 +13,7 @@
         <input id="senderEmail" type="text" placeholder="From Email" name="email-account" />
         <input id="smtpUserName" type="text" placeholder="SMTP username" name="smtpUsername" />
         <input id="smtpPassword" type="password" placeholder="SMTP password" name="smtpPassword" />
-        <button id="submitAccountDetails">Send emails</button><img id="send-spinner" class="hide" src="/images/spinner.gif"/>
+        <button id="submitAccountDetails" class="smtp-submit-element">Send emails</button><img id="send-spinner" class="smtp-submit-element hide" src="/images/spinner.gif" height="30"/>
     </form>
     </div>
     <div id="smtp-email-response"></div>
