Arvind : showing smtp in a hidden div.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -178,4 +178,11 @@ a:hover {
       }
     }
   }
+
+  #login-details {
+    #smtp-form-header{
+      color: #2A8EC0;
+      cursor: pointer;
+    }
+  }
 }
