--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -10,9 +10,11 @@
     </div>
     <div id="email-details" class="flow">
         <form id="email-details-form">
-            <div class="tooltip-container"  rel="tooltip" title="Your name as you want recipients to see it."><input id="from-name" name="from-name" placeholder="From (your name)"/></div>
-            <p rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text. You can customise each name in the next step'>Personalise your email by using putting tags (use ${tagName} in the text) where you want to personalise.</p>
-            <div class="tooltip-container"  rel="tooltip" title="You can personalise the subject too!"><input id="subject" name="subject" placeholder="Subject" /></div>
+            <div class="tooltip-container"  rel="tooltip" title="Your name as you want recipients to see it."><input id="from-name" name="from-name" placeholder="From (your name)"/></div><img class="help-icon" src="/images/help.png" rel="tooltip" title="Your name as you want recipients to see it." />
+            <p class="personalise-text">Personalise your email by using putting tags (use ${tagName} in the text) where you want to personalise.
+                <img class="small-help-icon" src="/images/help.png" rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text. You can customise each name in the next step' />
+            </p>
+            <div class="tooltip-container" rel="tooltip" title="You can personalise the subject too!"><input id="subject" name="subject" placeholder="Subject" /></div><img class="help-icon" src="/images/help.png" rel="tooltip" title="You can personalise the subject too!" />
             <textarea id="email-content" name="email-content" placeholder="Email text"></textarea>
             <div id="email-details-container">
                 <div id="csv-emails-container">
@@ -22,12 +24,16 @@
                     OR
                 </div>
                 <div id="file-upload-container" rel="tooltip" title="Upload a csv. The first row should have the name of the tags.<br />Put <i>email</i> in the first row of the column with the email addresses">
-                    <input type="file" id="email-attributes-file" enctype="multipart/form-data" />
+                    <input type="file" id="email-attributes-file" enctype="multipart/form-data" style="width : 80%;" />
+                    <img class="help-icon" src="/images/help.png" />
                 </div>
             </div>
-            <div class="tooltip-container"  rel="tooltip" title="Optional : the email address you want replies to be sent to"><input id="replyTo" name="replyTo" placeholder="Reply to Email Address" /></div>
-            <input id="includeSignature" name="include-signature" type="checkbox" />
-            <label for="includeSignature">Add a link to this website in my email signature.</label><br />
+            <div class="tooltip-container" rel="tooltip" title="Optional : the email address you want replies to be sent to" ><input id="replyTo" name="replyTo" placeholder="Reply to Email Address" /></div>
+            <img class="help-icon" src="/images/help.png"  rel="tooltip" title="Optional : the email address you want replies to be sent to"/>
+            <div>
+                <input id="includeSignature" name="include-signature" type="checkbox" />
+                <label for="includeSignature">Add a link to this website in my email signature.</label><br />
+            </div>
             <button id="submit-button">Continue</button>
         </form>
     </div>
