--- a/views/partials/email_preview.hbs
+++ b/views/partials/email_preview.hbs
@@ -1,4 +1,6 @@
-<p>To : {{to}}</p>
-<p>Subject : {{subject}}</p>
-<p>Text</p>
-{{{text}}}
+<div class="label">To</div>
+<div class="data">{{to}}</div>
+<div class="label">Subject</div>
+<div class="data">{{subject}}</div>
+<div class="label">Text</div>
+<div class="data">{{{text}}}</div>
