--- a/sass/main.scss
+++ b/sass/main.scss
@@ -108,14 +108,22 @@ a:hover {
   }
 
   #enter-attributes {
-    #email-template-preview{
+    #email-template-preview {
       $rowBorder : 1px solid #eee;
       border-top: $rowBorder;
       border-bottom: $rowBorder;
       margin: 0;
       padding: 15px 0px;
       margin: 10px 0px;
+      .label {
+        color : #bbb;
+        padding-bottom : 5px;
+      }
+      .attribute-data {
+        padding-bottom : 10px;
+      }
     }
+
     #empty-attributes {
       padding-left: 10px;
     }
