--- a/views/partials/email_attributes.hbs
+++ b/views/partials/email_attributes.hbs
@@ -3,7 +3,7 @@
 <div class="label">Subject</div>
 <div id="email-subject-preview" class="attribute-data">{{{subject}}}</div>
 <div class="label">Text</div>
-<div id="email-template-preview" class="attribute-data">{{{emailContent}}}</div>
+<div id="email-text-preview" class="attribute-data">{{{emailContent}}}</div>
 </div>
 <form id="attribute-details" name="whatever1">
 <table id="email-attribute-table">
